--- a/Dummy_exploration.ipynb
+++ b/Dummy_exploration.ipynb
@@ -18,10 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 4,
    "id": "b40f1c92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/serzhilin/jupyter/jupyterenv/lib/python3.8/site-packages/geopandas/_compat.py:111: UserWarning: The Shapely GEOS version (3.10.2-CAPI-1.16.0) is incompatible with the GEOS version PyGEOS was compiled with (3.10.1-CAPI-1.16.0). Conversions between both will be slow.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -293,19 +302,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "id": "75836d9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p_resono_hourly = 'resono_hourly_visits_130322_190322.csv'\n",
-    "resono_hourly = pd.read_csv(p_resono + p_resono_hourly)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "3652f322",
    "metadata": {},
    "outputs": [
     {
@@ -419,197 +417,174 @@
        "      <td>134.0</td>\n",
        "      <td>149.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15451</th>\n",
+       "      <td>15451</td>\n",
+       "      <td>Nieuwmarkt</td>\n",
+       "      <td>f8fd5c19-4b0f-4d30-859a-2e1a732ef4ae</td>\n",
+       "      <td>rcd23838</td>\n",
+       "      <td>2022-03-19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3959</td>\n",
+       "      <td>2346</td>\n",
+       "      <td>1226</td>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>1923.0</td>\n",
+       "      <td>2154.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15452</th>\n",
+       "      <td>15452</td>\n",
+       "      <td>Nieuwmarkt</td>\n",
+       "      <td>f8fd5c19-4b0f-4d30-859a-2e1a732ef4ae</td>\n",
+       "      <td>rcd23838</td>\n",
+       "      <td>2022-03-19</td>\n",
+       "      <td>20</td>\n",
+       "      <td>4121</td>\n",
+       "      <td>2534</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>2096.0</td>\n",
+       "      <td>2077.0</td>\n",
+       "      <td>2170.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15453</th>\n",
+       "      <td>15453</td>\n",
+       "      <td>Nieuwmarkt</td>\n",
+       "      <td>f8fd5c19-4b0f-4d30-859a-2e1a732ef4ae</td>\n",
+       "      <td>rcd23838</td>\n",
+       "      <td>2022-03-19</td>\n",
+       "      <td>21</td>\n",
+       "      <td>3178</td>\n",
+       "      <td>2052</td>\n",
+       "      <td>1096</td>\n",
+       "      <td>1616.0</td>\n",
+       "      <td>1682.0</td>\n",
+       "      <td>1926.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15454</th>\n",
+       "      <td>15454</td>\n",
+       "      <td>Nieuwmarkt</td>\n",
+       "      <td>f8fd5c19-4b0f-4d30-859a-2e1a732ef4ae</td>\n",
+       "      <td>rcd23838</td>\n",
+       "      <td>2022-03-19</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2616</td>\n",
+       "      <td>1589</td>\n",
+       "      <td>832</td>\n",
+       "      <td>1330.0</td>\n",
+       "      <td>1303.0</td>\n",
+       "      <td>1462.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15455</th>\n",
+       "      <td>15455</td>\n",
+       "      <td>Nieuwmarkt</td>\n",
+       "      <td>f8fd5c19-4b0f-4d30-859a-2e1a732ef4ae</td>\n",
+       "      <td>rcd23838</td>\n",
+       "      <td>2022-03-19</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1888</td>\n",
+       "      <td>1005</td>\n",
+       "      <td>565</td>\n",
+       "      <td>960.0</td>\n",
+       "      <td>824.0</td>\n",
+       "      <td>993.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>15456 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0           Location                          Locationcode  \\\n",
-       "0           0  Overhoeksparklaan  01c00230-bcb5-4d86-bf79-2a53ed1b1415   \n",
-       "1           1  Overhoeksparklaan  01c00230-bcb5-4d86-bf79-2a53ed1b1415   \n",
-       "2           2  Overhoeksparklaan  01c00230-bcb5-4d86-bf79-2a53ed1b1415   \n",
-       "3           3  Overhoeksparklaan  01c00230-bcb5-4d86-bf79-2a53ed1b1415   \n",
-       "4           4  Overhoeksparklaan  01c00230-bcb5-4d86-bf79-2a53ed1b1415   \n",
+       "       Unnamed: 0           Location                          Locationcode  \\\n",
+       "0               0  Overhoeksparklaan  01c00230-bcb5-4d86-bf79-2a53ed1b1415   \n",
+       "1               1  Overhoeksparklaan  01c00230-bcb5-4d86-bf79-2a53ed1b1415   \n",
+       "2               2  Overhoeksparklaan  01c00230-bcb5-4d86-bf79-2a53ed1b1415   \n",
+       "3               3  Overhoeksparklaan  01c00230-bcb5-4d86-bf79-2a53ed1b1415   \n",
+       "4               4  Overhoeksparklaan  01c00230-bcb5-4d86-bf79-2a53ed1b1415   \n",
+       "...           ...                ...                                   ...   \n",
+       "15451       15451         Nieuwmarkt  f8fd5c19-4b0f-4d30-859a-2e1a732ef4ae   \n",
+       "15452       15452         Nieuwmarkt  f8fd5c19-4b0f-4d30-859a-2e1a732ef4ae   \n",
+       "15453       15453         Nieuwmarkt  f8fd5c19-4b0f-4d30-859a-2e1a732ef4ae   \n",
+       "15454       15454         Nieuwmarkt  f8fd5c19-4b0f-4d30-859a-2e1a732ef4ae   \n",
+       "15455       15455         Nieuwmarkt  f8fd5c19-4b0f-4d30-859a-2e1a732ef4ae   \n",
        "\n",
-       "  Resono-ID        Date  Hour  Visits  Unique  Recurring  Visits_norm  \\\n",
-       "0  rcd23021  2022-03-13     0     526     245         63        268.0   \n",
-       "1  rcd23021  2022-03-13     1     724     301        131        368.0   \n",
-       "2  rcd23021  2022-03-13     2     801     326        100        407.0   \n",
-       "3  rcd23021  2022-03-13     3     601     230         88        306.0   \n",
-       "4  rcd23021  2022-03-13     4     344     164         85        175.0   \n",
+       "      Resono-ID        Date  Hour  Visits  Unique  Recurring  Visits_norm  \\\n",
+       "0      rcd23021  2022-03-13     0     526     245         63        268.0   \n",
+       "1      rcd23021  2022-03-13     1     724     301        131        368.0   \n",
+       "2      rcd23021  2022-03-13     2     801     326        100        407.0   \n",
+       "3      rcd23021  2022-03-13     3     601     230         88        306.0   \n",
+       "4      rcd23021  2022-03-13     4     344     164         85        175.0   \n",
+       "...         ...         ...   ...     ...     ...        ...          ...   \n",
+       "15451  rcd23838  2022-03-19    19    3959    2346       1226       2014.0   \n",
+       "15452  rcd23838  2022-03-19    20    4121    2534       1235       2096.0   \n",
+       "15453  rcd23838  2022-03-19    21    3178    2052       1096       1616.0   \n",
+       "15454  rcd23838  2022-03-19    22    2616    1589        832       1330.0   \n",
+       "15455  rcd23838  2022-03-19    23    1888    1005        565        960.0   \n",
        "\n",
-       "   Unique_norm  Recurring_norm  \n",
-       "0        201.0           111.0  \n",
-       "1        247.0           230.0  \n",
-       "2        267.0           176.0  \n",
-       "3        189.0           155.0  \n",
-       "4        134.0           149.0  "
+       "       Unique_norm  Recurring_norm  \n",
+       "0            201.0           111.0  \n",
+       "1            247.0           230.0  \n",
+       "2            267.0           176.0  \n",
+       "3            189.0           155.0  \n",
+       "4            134.0           149.0  \n",
+       "...            ...             ...  \n",
+       "15451       1923.0          2154.0  \n",
+       "15452       2077.0          2170.0  \n",
+       "15453       1682.0          1926.0  \n",
+       "15454       1303.0          1462.0  \n",
+       "15455        824.0           993.0  \n",
+       "\n",
+       "[15456 rows x 12 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "resono_hourly.head()"
+    "p_resono_hourly = 'resono_hourly_visits_130322_190322.csv'\n",
+    "resono_hourly = pd.read_csv(p_resono + p_resono_hourly)\n",
+    "select_date = '2022-03-19'\n",
+    "resono_hourly_day = resono_hourly[resono_hourly[\"Date\"] == select_date]\n",
+    "gr_by_loc = resono_hourly_day.groupby('Location')\n",
+    "resono_hourly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "id": "dc7a1a9d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Hour</th>\n",
-       "      <th>Visits</th>\n",
-       "      <th>Unique</th>\n",
-       "      <th>Recurring</th>\n",
-       "      <th>Visits_norm</th>\n",
-       "      <th>Unique_norm</th>\n",
-       "      <th>Recurring_norm</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>15456.000000</td>\n",
-       "      <td>15456.00000</td>\n",
-       "      <td>15456.000000</td>\n",
-       "      <td>15456.000000</td>\n",
-       "      <td>15456.000000</td>\n",
-       "      <td>15456.000000</td>\n",
-       "      <td>15456.000000</td>\n",
-       "      <td>15456.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>7727.500000</td>\n",
-       "      <td>11.50000</td>\n",
-       "      <td>1293.411038</td>\n",
-       "      <td>843.459951</td>\n",
-       "      <td>544.107660</td>\n",
-       "      <td>657.819876</td>\n",
-       "      <td>691.473408</td>\n",
-       "      <td>955.922619</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>4461.907216</td>\n",
-       "      <td>6.92241</td>\n",
-       "      <td>1614.137834</td>\n",
-       "      <td>1065.273285</td>\n",
-       "      <td>685.660321</td>\n",
-       "      <td>820.942681</td>\n",
-       "      <td>873.318163</td>\n",
-       "      <td>1204.600859</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>3863.750000</td>\n",
-       "      <td>5.75000</td>\n",
-       "      <td>234.000000</td>\n",
-       "      <td>157.000000</td>\n",
-       "      <td>94.000000</td>\n",
-       "      <td>119.000000</td>\n",
-       "      <td>129.000000</td>\n",
-       "      <td>165.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>7727.500000</td>\n",
-       "      <td>11.50000</td>\n",
-       "      <td>713.000000</td>\n",
-       "      <td>451.000000</td>\n",
-       "      <td>285.000000</td>\n",
-       "      <td>363.000000</td>\n",
-       "      <td>370.000000</td>\n",
-       "      <td>501.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>11591.250000</td>\n",
-       "      <td>17.25000</td>\n",
-       "      <td>1731.250000</td>\n",
-       "      <td>1130.000000</td>\n",
-       "      <td>735.000000</td>\n",
-       "      <td>880.250000</td>\n",
-       "      <td>926.000000</td>\n",
-       "      <td>1291.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>15455.000000</td>\n",
-       "      <td>23.00000</td>\n",
-       "      <td>19662.000000</td>\n",
-       "      <td>12198.000000</td>\n",
-       "      <td>5692.000000</td>\n",
-       "      <td>10000.000000</td>\n",
-       "      <td>10000.000000</td>\n",
-       "      <td>10000.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Unnamed: 0         Hour        Visits        Unique     Recurring  \\\n",
-       "count  15456.000000  15456.00000  15456.000000  15456.000000  15456.000000   \n",
-       "mean    7727.500000     11.50000   1293.411038    843.459951    544.107660   \n",
-       "std     4461.907216      6.92241   1614.137834   1065.273285    685.660321   \n",
-       "min        0.000000      0.00000      0.000000      0.000000      0.000000   \n",
-       "25%     3863.750000      5.75000    234.000000    157.000000     94.000000   \n",
-       "50%     7727.500000     11.50000    713.000000    451.000000    285.000000   \n",
-       "75%    11591.250000     17.25000   1731.250000   1130.000000    735.000000   \n",
-       "max    15455.000000     23.00000  19662.000000  12198.000000   5692.000000   \n",
-       "\n",
-       "        Visits_norm   Unique_norm  Recurring_norm  \n",
-       "count  15456.000000  15456.000000    15456.000000  \n",
-       "mean     657.819876    691.473408      955.922619  \n",
-       "std      820.942681    873.318163     1204.600859  \n",
-       "min        0.000000      0.000000        0.000000  \n",
-       "25%      119.000000    129.000000      165.000000  \n",
-       "50%      363.000000    370.000000      501.000000  \n",
-       "75%      880.250000    926.000000     1291.000000  \n",
-       "max    10000.000000  10000.000000    10000.000000  "
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'resono_hourly' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mresono_hourly\u001b[49m\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'resono_hourly' is not defined"
+     ]
     }
    ],
    "source": [
